--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-virtualized": "^9.22.3",
+    "react-virtualized-auto-sizer": "^1.0.6",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
